# klipper

./: .gitignore  Makefile  README_eddy_ng.md  kliptest.c
docs/: Config_Reference.md  Eddy_Probe.md
klippy/: configfile.py  configfile.pyi  klippy.py  pyproject.toml  serialhdl.py  toolhead.py  util.py  webhooks.py
klippy/extras/: bed_mesh.py  homing.py  ldc1612.py  ldc1612_ng.py  probe.py  probe_eddy.py  probe_eddy_current.py  probe_eddy_ng.py  scanner.py  statistics.py  temperature_probe.py
scripts/: check-gcc.sh  flash_usb.py
src/: Makefile  sensor_ldc1612.c  sensor_ldc1612_ng.c
src/rp2040/: Kconfig  Makefile  idm.c
src/stm32/: Kconfig  gpio.h  hard_pwm.c
