[project]
name = "klippy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi==1.14.6",
    "dataclasses-json>=0.6.7",
    "greenlet==2.0.2 ; python_full_version < '3.12'",
    "greenlet==3.0.3 ; python_full_version >= '3.12'",
    "jinja2==2.11.3",
    "markupsafe==1.1.1",
    "numpy>=2.2.1",
    "pyserial==3.4",
    "python-can==3.3.4",
]
